New ipynb updates

--- a/Hw_1/Notebooks/READ_ME.ipynb
+++ b/Hw_1/Notebooks/READ_ME.ipynb
@@ -1,12 +1,32 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Overview\n",
+    "# Goal and Overview\n",
     "\n",
-    "The goal of this project was to impliment a Linear Regression on a dataset of my choice. I chose to regress alcohol density onto percent alchol content from a pair of data sets from UCIML. While exploring the data, I became interested in how the rated quality effectd this measurement, and how the color of while effect the results. This exploration was not published in the [Technical Notebook](), altough the exploratory graphs can be found in [Additional Notebook](). "
+    "The goal of this project was to implement a Linear Regression on a select dataset. I chose to run a multiple logistic regression on the [Heart Failure Prediction](https://www.kaggle.com/andrewmvd/heart-failure-clinical-data) data set with the goal of answering: how strong of a prediction model can be built using these few features, and among this list, which feature is the strongest single predictor of death for patients dealing with a heart condition."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Motivation\n",
+    "\n",
+    "It is natural to want to leverage Machine Learning techniques in the world of health and medicine. In doing so, we can aim to maximize what we can learn from each patient, and better prepare for cases to come. In this particular study, we aim to better understand patients with heart conditions, since it is globally and nationally the leading cause death. "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Background\n",
+    "This data was provided from [Kaggle](https://www.kaggle.com/andrewmvd/heart-failure-clinical-data), and was based on real patient data gathered in 2015. The patients studied had varying degrees of heart failure, were ... Using a variety of Machine Learning techniques, they concluded that you could reliably predict survival rates studying serum creatinine and ejection fraction alone."
    ]
   },
   {
@@ -15,10 +35,10 @@
    "source": [
     "# Navigation (Need to link notebooks)\n",
     "\n",
-    "[Technical Notebok](https://github.com/a-woodbury/A-House-with-a-View#data) -\n",
-    "[Additional NoteBook](https://github.com/a-woodbury/A-House-with-a-View#model) -\n",
-    "[Data - Kaggle](https://www.kaggle.com/uciml/red-wine-quality-cortez-et-al-2009) - \n",
-    "[Data - UCIML](https://archive.ics.uci.edu/ml/machine-learning-databases/wine-quality/)"
+    "[Technical Notebok](https://github.com/miles-frankllin/DATA_602/blob/master/Hw_1/Notebooks/Additional_Notebook.ipynb) -\n",
+    "[Additional NoteBook](https://github.com/miles-frankllin/DATA_602/blob/master/Hw_1/Notebooks/Additional_Notebook.ipynb) -\n",
+    "[Data - Kaggle](https://www.kaggle.com/andrewmvd/heart-failure-clinical-data) - \n",
+    "[Data - Research Paper](https://bmcmedinformdecismak.biomedcentral.com/articles/10.1186/s12911-020-1023-5)"
    ]
   },
   {
@@ -29,43 +49,263 @@
     "<pre>\n",
     "Languages    : Python 3.8.3\n",
     "Tools/IDE    : Anaconda\n",
-    "Libraries    : pandas, matplotlib, seaborn, numpy, scipy, sklearn\n",
+    "Libraries    : requests, bs4, time, pandas, matplotlib, numpy, scipy, sklearn\n",
     "</pre>"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Data Sources\n",
-    "Note: Initial data was found from [Kaggle](https://www.kaggle.com/uciml/red-wine-quality-cortez-et-al-2009), but was all downloaded from [UCIML](https://archive.ics.uci.edu/ml/machine-learning-databases/wine-quality/) \n",
     "\n",
-    "### Red Wine Data\n",
+    "### Raw Data\n",
     "<pre>\n",
-    "File Name      : winequality-red.csv\n",
-    "URL            : https://archive.ics.uci.edu/ml/machine-learning-databases/wine-quality/\n",
-    "Limitations    : N/A\n",
+    "File Name      : heart_failure_clinical_records_dataset.csv\n",
+    "URL            : https://www.kaggle.com/andrewmvd/heart-failure-clinical-data\n",
+    "Limitations    : This is not the largest sample size, given the magnitude of the problem it is aiming to solve.\n",
     "Concerns       : N/A\n",
-    "Dimensions     : 1599 rows × 12 columns\n",
-    "Columns        : fixed acidity (float64), volatile acidity (float64), citric acid (float64), residual sugar (float64), chlorides (float64), free sulfur dioxide (float64), total sulfur dioxide (float64), density (float64), pH (float64), sulphates (float64), alcohol (float64), quality (int64)\n",
+    "Dimensions     : 299 rows × 13 columns\n",
+    "Columns        : \n",
+    "<table class=\"data last-table\">\n",
+    " <thead class=\"c-article-table-head\">\n",
+    "  <tr>\n",
+    "   <th class=\"u-text-left\">\n",
+    "    Feature\n",
+    "   </th>\n",
+    "   <th class=\"u-text-left\">\n",
+    "    Explanation\n",
+    "   </th>\n",
+    "   <th class=\"u-text-left\">\n",
+    "    Measurement\n",
+    "   </th>\n",
+    "   <th class=\"u-text-left\">\n",
+    "    Range\n",
+    "   </th>\n",
+    "  </tr>\n",
+    " </thead>\n",
+    " <tbody>\n",
+    "  <tr>\n",
+    "   <td class=\"u-text-left\">\n",
+    "    Age\n",
+    "   </td>\n",
+    "   <td class=\"u-text-left\">\n",
+    "    Age of the patient\n",
+    "   </td>\n",
+    "   <td class=\"u-text-left\">\n",
+    "    Years\n",
+    "   </td>\n",
+    "   <td class=\"u-text-left\">\n",
+    "    [40,..., 95]\n",
+    "   </td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "   <td class=\"u-text-left\">\n",
+    "    Anaemia\n",
+    "   </td>\n",
+    "   <td class=\"u-text-left\">\n",
+    "    Decrease of red blood cells or hemoglobin\n",
+    "   </td>\n",
+    "   <td class=\"u-text-left\">\n",
+    "    Boolean\n",
+    "   </td>\n",
+    "   <td class=\"u-text-left\">\n",
+    "    0, 1\n",
+    "   </td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "   <td class=\"u-text-left\">\n",
+    "    High blood pressure\n",
+    "   </td>\n",
+    "   <td class=\"u-text-left\">\n",
+    "    If a patient has hypertension\n",
+    "   </td>\n",
+    "   <td class=\"u-text-left\">\n",
+    "    Boolean\n",
+    "   </td>\n",
+    "   <td class=\"u-text-left\">\n",
+    "    0, 1\n",
+    "   </td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "   <td class=\"u-text-left\">\n",
+    "    Creatinine phosphokinase\n",
+    "   </td>\n",
+    "   <td class=\"u-text-left\">\n",
+    "    Level of the CPK enzyme in the blood\n",
+    "   </td>\n",
+    "   <td class=\"u-text-left\">\n",
+    "    mcg/L\n",
+    "   </td>\n",
+    "   <td class=\"u-text-left\">\n",
+    "    [23,..., 7861]\n",
+    "   </td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "   <td class=\"u-text-left\">\n",
+    "    (CPK)\n",
+    "   </td>\n",
+    "   <td class=\"u-text-left\">\n",
+    "   </td>\n",
+    "   <td class=\"u-text-left\">\n",
+    "   </td>\n",
+    "   <td class=\"u-text-left\">\n",
+    "   </td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "   <td class=\"u-text-left\">\n",
+    "    Diabetes\n",
+    "   </td>\n",
+    "   <td class=\"u-text-left\">\n",
+    "    If the patient has diabetes\n",
+    "   </td>\n",
+    "   <td class=\"u-text-left\">\n",
+    "    Boolean\n",
+    "   </td>\n",
+    "   <td class=\"u-text-left\">\n",
+    "    0, 1\n",
+    "   </td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "   <td class=\"u-text-left\">\n",
+    "    Ejection fraction\n",
+    "   </td>\n",
+    "   <td class=\"u-text-left\">\n",
+    "    Percentage of blood leaving\n",
+    "   </td>\n",
+    "   <td class=\"u-text-left\">\n",
+    "    Percentage\n",
+    "   </td>\n",
+    "   <td class=\"u-text-left\">\n",
+    "    [14,..., 80]\n",
+    "   </td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "   <td class=\"u-text-left\">\n",
+    "   </td>\n",
+    "   <td class=\"u-text-left\">\n",
+    "    the heart at each contraction\n",
+    "   </td>\n",
+    "   <td class=\"u-text-left\">\n",
+    "   </td>\n",
+    "   <td class=\"u-text-left\">\n",
+    "   </td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "   <td class=\"u-text-left\">\n",
+    "    Sex\n",
+    "   </td>\n",
+    "   <td class=\"u-text-left\">\n",
+    "    Woman or man\n",
+    "   </td>\n",
+    "   <td class=\"u-text-left\">\n",
+    "    Binary\n",
+    "   </td>\n",
+    "   <td class=\"u-text-left\">\n",
+    "    0, 1\n",
+    "   </td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "   <td class=\"u-text-left\">\n",
+    "    Platelets\n",
+    "   </td>\n",
+    "   <td class=\"u-text-left\">\n",
+    "    Platelets in the blood\n",
+    "   </td>\n",
+    "   <td class=\"u-text-left\">\n",
+    "    kiloplatelets/mL\n",
+    "   </td>\n",
+    "   <td class=\"u-text-left\">\n",
+    "    [25.01,..., 850.00]\n",
+    "   </td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "   <td class=\"u-text-left\">\n",
+    "    Serum creatinine\n",
+    "   </td>\n",
+    "   <td class=\"u-text-left\">\n",
+    "    Level of creatinine in the blood\n",
+    "   </td>\n",
+    "   <td class=\"u-text-left\">\n",
+    "    mg/dL\n",
+    "   </td>\n",
+    "   <td class=\"u-text-left\">\n",
+    "    [0.50,..., 9.40]\n",
+    "   </td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "   <td class=\"u-text-left\">\n",
+    "    Serum sodium\n",
+    "   </td>\n",
+    "   <td class=\"u-text-left\">\n",
+    "    Level of sodium in the blood\n",
+    "   </td>\n",
+    "   <td class=\"u-text-left\">\n",
+    "    mEq/L\n",
+    "   </td>\n",
+    "   <td class=\"u-text-left\">\n",
+    "    [114,..., 148]\n",
+    "   </td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "   <td class=\"u-text-left\">\n",
+    "    Smoking\n",
+    "   </td>\n",
+    "   <td class=\"u-text-left\">\n",
+    "    If the patient smokes\n",
+    "   </td>\n",
+    "   <td class=\"u-text-left\">\n",
+    "    Boolean\n",
+    "   </td>\n",
+    "   <td class=\"u-text-left\">\n",
+    "    0, 1\n",
+    "   </td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "   <td class=\"u-text-left\">\n",
+    "    Time\n",
+    "   </td>\n",
+    "   <td class=\"u-text-left\">\n",
+    "    Follow-up period\n",
+    "   </td>\n",
+    "   <td class=\"u-text-left\">\n",
+    "    Days\n",
+    "   </td>\n",
+    "   <td class=\"u-text-left\">\n",
+    "    [4,...,285]\n",
+    "   </td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "   <td class=\"u-text-left\">\n",
+    "    (target) death event\n",
+    "   </td>\n",
+    "   <td class=\"u-text-left\">\n",
+    "    If the patient died during the follow-up period\n",
+    "   </td>\n",
+    "   <td class=\"u-text-left\">\n",
+    "    Boolean\n",
+    "   </td>\n",
+    "   <td class=\"u-text-left\">\n",
+    "    0, 1\n",
+    "   </td>\n",
+    "  </tr>\n",
+    " </tbody>\n",
+    "</table>\n",
+    "* Table from https://bmcmedinformdecismak.biomedcentral.com/articles/10.1186/s12911-020-1023-5/tables/1\n",
     "</pre>\n",
-    "### White Wine Data\n",
+    "\n",
+    "### Cleaned Data\n",
     "<pre>\n",
-    "File Name      : winequality-white.csv\n",
-    "URL            : https://archive.ics.uci.edu/ml/machine-learning-databases/wine-quality/\n",
-    "Limitations    : N/A\n",
-    "Concerns       : N/A\n",
-    "Dimensions     : 4898 rows × 12 columns\n",
-    "Columns        : fixed acidity (float64), volatile acidity (float64), citric acid (float64), residual sugar (float64), chlorides (float64), free sulfur dioxide (float64), total sulfur dioxide (float64), density (float64), pH (float64), sulphates (float64), alcohol (float64), quality (int64)\n",
-    "</pre>\n",
-    "### Cleaned Data Set\n",
-    "<pre>\n",
-    "File Name      : winequality-both_cleaned.csv\n",
+    "File Name      : heart_failure_clinical_records_dataset-cleaned.csv\n",
     "URL            : N/A\n",
     "Limitations    : N/A\n",
-    "Concerns       : There are many more instances of white wine than red wine.\n",
-    "Dimensions     : 6491 rows × 13 columns\n",
-    "Columns        : fixed acidity (float64), volatile acidity (float64), citric acid (float64), residual sugar (float64), chlorides (float64), free sulfur dioxide (float64), total sulfur dioxide (float64), density (float64), pH (float64), sulphates (float64), alcohol (float64), quality (int64), color (object)\n",
+    "Concerns       : N/A\n",
+    "Dimensions     : 279 rows × 13 columns\n",
+    "Columns        : age (int64), anaemia (int64), creatinine_phosphokinase (int64), diabetes (int64),\n",
+    "                 ejection_fraction (int64), high_blood_pressure (int64), platelets (float64), \n",
+    "                 serum_creatinine (float64), serum_sodium (int64), sex (int64), smoking (int64),\n",
+    "                 time (int64), DEATH_EVENT (int64)\n",
     "</pre>"
    ]
   },
@@ -77,8 +317,14 @@
     "<pre>\n",
     "URL            : https://github.com/a-woodbury/A-House-with-a-View\n",
     "Author         : Alphonso Woodbury, Joseph McHugh\n",
-    "Purpose        : I reference the source code of this project to better understand how to format a project in Jupyter NoteBook.\n",
-    "<pre>"
+    "Purpose        : I reference the source code of this project to better understand how to format a project in \n",
+    "                 Jupyter NoteBook.\n",
+    "</pre>\n",
+    "<pre>\n",
+    "URL            : https://doi.org/10.1186/s12911-020-1023-5\n",
+    "Author         : Chicco, D., Jurman, G.\n",
+    "Purpose        : The data set found was built on the study in this article.\n",
+    "</pre>"
    ]
   },
   {
