--- a/Final_Project/Notebooks/Data_602_FinalProject_TransferLearning.ipynb
+++ b/Final_Project/Notebooks/Data_602_FinalProject_TransferLearning.ipynb
@@ -1655,6 +1655,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HWaJJwHX9g3F"
+      },
+      "source": [
+        "## 7.2 Addtional Round of Training"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
