Updated code for Tech

--- a/Final_Project/Notebooks/Technical_Notebook.ipynb
+++ b/Final_Project/Notebooks/Technical_Notebook.ipynb
@@ -63,7 +63,7 @@
         "id": "GB_kJPxkr_SE"
       },
       "source": [
-        "# Folder Architecture for Data\n"
+        "# Exploring the Data\n"
       ]
     },
     {
@@ -100,7 +100,7 @@
         "id": "FdYRlFJ7FJRv"
       },
       "source": [
-        "#  Explore many different models and short-list the best ones\n",
+        "# Different Models Used\n",
         "\n",
         "The reported Confusion Matrices for the base model were reported as shown below, and can be found [here](https://github.com/HeeebsInc/FaceMaskEmotionDetection/blob/master/Images/Mobilenet_CM.png) from the GitHub Repository."
       ]
@@ -138,7 +138,7 @@
         "id": "v622LjCwFJNH"
       },
       "source": [
-        "# Present Solution"
+        "# Solution"
       ]
     },
     {
@@ -319,7 +319,17 @@
       "source": [
         "# Limitations and Later Work\n",
         "\n",
-        "I am still unsure why the imported model performed as poorly as it did, but this was a major setback in the ability to make meaningful progress. It would certainly be helpful to simply have the model perform as reported before making any additional attempts to further train the model. With that said, the original goal of the project was to enhance the model’s ability to predict on images where the individual is wearing glasses and a mask. It was difficult to find a data set that had a large number of images matching this description, so I had hoped to accomplish this through a slightly different process. The goal was to improve the model’s accuracy on this sub group by adding the [Glasses vs No Glasses](https://www.kaggle.com/jeffheaton/glasses-or-no-glasses) set to train on. \n"
+        "Initially, I was unsure why the imported model performed as poorly as it did, and this was a major setback in my ability to make meaningful progress on the original goal. Nonetheless, I continued forward and researching for what could be the source of my problem. I recently found out that I was missing a key step in the process, image preprocessing. In addition to all the ways you can generate your image sets, models require specific formatting in order to perform as intended. In this project I needed to call\n",
+        ">```\n",
+        "tf.keras.applications.mobilenet_v2.preprocess_input\n",
+        "```\n",
+        "\n",
+        "on my input data. Ideally, this is the only step I missed, and I will be able to continue moving forward as initially planned.\n",
+        "\n",
+        "To recap, the original goal of the project was to enhance the model’s ability to predict on images where the individual is wearing glasses and a mask. It was difficult to find a data set that had a large number of images matching this description, so I had hoped to accomplish this through a slightly different process. The goal was to improve the model’s accuracy on this sub group by adding the [Glasses vs No Glasses](https://www.kaggle.com/jeffheaton/glasses-or-no-glasses) set to train on. \n",
+        "\n",
+        "On a final note, I learned that transfer learning models typically only need one, if any, internal dense layers added to the architecture. This means that the model should perform well if the changes mentioned above are implemented, and the additional dense layers are reduced to a single inner layer and an output layer.\n",
+        "\n"
       ]
     },
     {
